# Clarity

./: .gitignore  CMakeLists.txt  ChessEngine.sln  README.md  makefile  network.txt  perft_suite_results_ethereal.txt
ChessEngine/: Bishop.txt  BishopAttacks.txt  ChessEngine.csproj  ChessEngine.sln  People's Sayings.txt  Rook.txt  UCI.cs
ChessEngine/Backend/: BitboardOperations.cs  Board.cs  BoardState.cs  MaskGenerators.cs  Masks.cs  Move.cs  MoveGenerators.cs  Piece.cs
ChessEngine/Backend/Generators/: MaskGenerator.cs
ChessEngine/Bot/: ChessBot.cs  ChessEngine.cs  MoveTable.cs  PSQTs.cs  TT.cs  TranspositionTable.cs
ChessEngine/Engine/: ChessEngine.cs  MoveTable.cs  PSQTs.cs  TT.cs
ChessEngine/LookupGenerators/: MagicGeneration.cs  PawnLookup.cs  PawnLookup.py  RayGenerator.cs
ChessEngine/Properties/: launchSettings.json
ChessEngine/Tests/: Perft.cs  Test1.cs  TestBot.cs  TestSuite.cs  TestsBackend.cs
ChessEngine/boardRepresentation/: Board.cs  BoardFunctions.cs  Move.cs  Piece.cs  PieceType  PieceType.cs  Square.cs
ChessEngine/bot/: Search.cs
Generator Code/: maskgenerator.cpp
src/: bench.h  bmi2.cpp  bmi2.h  board.cpp  clarity_meme001.nnue  clarity_net001.nnue  clarity_spnet_01.nnue  cn_011.nnue  cn_012.nnue  cn_019.nnue  cn_020.nnue  corrhist.h  cuckoo.h  datagen.cpp  datagen.h  eval.cpp  eval.h  globals.cpp  globals.h  history.h  info.h  limits.h  magic.cpp  magic.h  masks.h  move.cpp  movegen.cpp  movemap.h  movepick.h  normalize.h  nwupdate.h  policy.cpp  policy.h  psqt.cpp  psqt.h  rays.h  search.cpp  search.h  see.h  simd.h  (+13 more)
src/nets/: clarity_net001.nnue  clarity_net002.nnue  clarity_net003.nnue  clarity_net004.nnue  clarity_net005.nnue  clarity_net006.nnue  clarity_net007.nnue  clarity_net008.nnue  clarity_net009.nnue  clarity_net010.nnue  clarity_testnet.nnue
src/policy/: cpn_001.pn  cpn_001q.pn  cpn_002.pn  cpn_002q.pn  cpn_003q.pn
